Redesign jextract-swift: plugins and avoid custom swift features (#170)